[tool.poetry]
name = "rss-mcp-server"
version = "0.1.0"
description = "A FastAPI server implementing the MCP specification."
authors = ["Agent <agent@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
fastapi-mcp = "^0.1.0"
feedparser = "^6.0.10"
httpx = "^0.27.0"
python-dateutil = "^2.9.0.post0"
cachetools = "^5.3.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
respx = "^0.20.2"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
pythonpath = "."
markers = [
    "online: marks tests that require an internet connection",
]
